# FFmpeg

./: .gitignore
doc/examples/: CMakeLists.txt  decode_video.c  encode_video.c  remuxing.c
doc/examples/xcode/: CMakeCache.txt  cmake_install.cmake
doc/examples/xcode/CMakeScripts/: ReRunCMake.make
doc/examples/xcode/FFmpeg.xcodeproj/: project.pbxproj
doc/examples/xcode/FFmpeg.xcodeproj/project.xcworkspace/xcuserdata/tl.xcuserdatad/: UserInterfaceState.xcuserstate
doc/examples/xcode/FFmpeg.xcodeproj/xcshareddata/xcschemes/: encode_video.xcscheme
doc/examples/xcode/FFmpeg.xcodeproj/xcuserdata/tl.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
doc/examples/xcode/FFmpeg.xcodeproj/xcuserdata/tl.xcuserdatad/xcschemes/: xcschememanagement.plist
doc/examples/xcode/FFmpegExamples.xcodeproj/: project.pbxproj
doc/examples/xcode/FFmpegExamples.xcodeproj/project.xcworkspace/xcuserdata/tl.xcuserdatad/: UserInterfaceState.xcuserstate
doc/examples/xcode/FFmpegExamples.xcodeproj/xcshareddata/xcschemes/: remuxing.xcscheme
doc/examples/xcode/FFmpegExamples.xcodeproj/xcuserdata/ly-mac.xcuserdatad/xcschemes/: xcschememanagement.plist
doc/examples/xcode/FFmpegExamples.xcodeproj/xcuserdata/tl.xcuserdatad/xcschemes/: xcschememanagement.plist
fftools/: CMakeLists.txt
fftools/xcode/: CMakeCache.txt  cmake_install.cmake
fftools/xcode/CMakeScripts/: ReRunCMake.make
fftools/xcode/FFmpeg.xcodeproj/: project.pbxproj
fftools/xcode/FFmpeg.xcodeproj/project.xcworkspace/xcuserdata/tl.xcuserdatad/: UserInterfaceState.xcuserstate
fftools/xcode/FFmpeg.xcodeproj/xcshareddata/xcschemes/: ffmpeg.xcscheme  ffplay.xcscheme  ffprobe.xcscheme
fftools/xcode/FFmpeg.xcodeproj/xcuserdata/ly-mac.xcuserdatad/xcschemes/: xcschememanagement.plist
fftools/xcode/FFmpeg.xcodeproj/xcuserdata/tl.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
fftools/xcode/FFmpeg.xcodeproj/xcuserdata/tl.xcuserdatad/xcschemes/: xcschememanagement.plist
fftools/xcode/FFmpeg.xcworkspace/: contents.xcworkspacedata
fftools/xcode/FFmpeg.xcworkspace/xcuserdata/tl.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
fftools/xcode/FFmpegLearn/FFmpegLearn/: main.c
fftools/xcode/FFmpegLearn/FFmpegLearn.xcodeproj/: project.pbxproj
fftools/xcode/FFmpegLearn/FFmpegLearn.xcodeproj/xcshareddata/xcschemes/: FFmpegLearn.xcscheme
fftools/xcode/FFmpegLearn/FFmpegLearn.xcodeproj/xcuserdata/tl.xcuserdatad/xcschemes/: xcschememanagement.plist
fftools/xcode/ffmpeg_learn/: main.cpp
xcode/FFmpeg.xcworkspace/: contents.xcworkspacedata
xcode/FFmpeg.xcworkspace/xcuserdata/ly-mac.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/FFmpeg.xcworkspace/xcuserdata/ly-mac.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/FFmpeg.xcworkspace/xcuserdata/tl.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/FFmpeg.xcworkspace/xcuserdata/tl.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/FFmpegLearn/FFmpegLearn/: FileUtils.cpp  FileUtils.hpp  ffdecoder.cpp  ffdecoder.hpp  ffencoder.cpp  ffencoder.hpp  ffmpegInclude.h  ffrender.cpp  ffrender.hpp  main.c  main.cpp
xcode/FFmpegLearn/FFmpegLearn.xcodeproj/: project.pbxproj
xcode/FFmpegLearn/FFmpegLearn.xcodeproj/xcshareddata/xcschemes/: FFmpegLearn.xcscheme
xcode/FFmpegLearn/FFmpegLearn.xcodeproj/xcuserdata/ly-mac.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/FFmpegLearn/FFmpegLearn.xcodeproj/xcuserdata/tl.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/FFmpegLearn/FFmpegLearn/FFMpeg_Sources/: ffdecoder.cpp  ffdecoder.hpp  ffencoder.cpp  ffencoder.hpp  ffrender.hpp
xcode/FFmpegLearn/FFmpegLearn/VideoToolBox/: VTDecoder.cpp  VTDecoder.hpp
xcode/Resources/in/: in.h264
